--- a/cvPageCSS.css
+++ b/cvPageCSS.css
@@ -1,18 +1,24 @@
 
 body
 {
-    background-color: black;
+    background-color: rgb(27, 28, 28);
 }
 
 #intro
 {
     background-color: white;
-    color: black;
+    color: rgb(27, 28, 28);
+    border-style: solid;
+    border-top-style: none;
+    border-color: rgb(210, 214, 214);
+    border-bottom-left-radius: 0.4em;
+    border-bottom-right-radius: 0.4em;
+    border-width: 0.09em;
 }
 
 #pageHeader
 {
-    color: black;
+    color: rgb(27, 28, 28);
     font-size: 5em;
     padding-bottom: 0.3em;
     text-align: center;
@@ -22,6 +28,7 @@ body
 {
     color: white;
     text-align:center;
+    padding-top: 1em;
 }
 
 .eduTitle
@@ -110,6 +117,13 @@ body
     padding-left: 0em;
 }
 
+#profileIMG
+{
+    border-style: solid;
+    border-width: 0.09em;
+    border-color: rgb(210, 214, 214);
+}
+
 /*The CSS for adding custom styles to the bootstrap navbar was taken from: https://medium.com/wdstack/bootstrap-4-custom-navbar-1f6a2da5ed3c */
 .navbar-custom {
 }
@@ -129,4 +143,5 @@ body
 .navbar-custom .nav-item.active .nav-link,
 .navbar-custom .nav-item:hover .nav-link {
     color: rgb(61, 148, 206);
+    text-decoration-line: underline;
 }
